# Shadow_orography

./: .gitignore  NOTA_INTERFACCIA_ALGORITMO.md  README.md  pyproject.toml  shadow_orography.spec
.github/workflows/: ci.yml
src/shadow_orography/: __init__.py  main.py
src/shadow_orography/core/: __init__.py  calendar.py  geometry.py  shadow_model.py  solar.py
src/shadow_orography/gui/: __init__.py  app.py
tests/: test_calendar.py  test_core_math.py  test_geometry.py  test_solar.py  test_startup.py
wtg_shadow_hours/: __init__.py  core.py  metadata.txt  plugin.py  processing_provider.py
wtg_shadow_hours/algorithms/: shadow_hours.py
