[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shadow-orography"
version = "0.1.0"
description = "Shadow Orography Studio"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.1",
  "pvlib>=0.10",
  "shapely>=2.0",
  "pyproj>=3.6",
  "pyshp>=2.3",
  "PySide6>=6.6",
  "imageio>=2.34",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
  "pyinstaller>=6.0",
]

[project.scripts]
shadow-orography = "shadow_orography.main:run"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
line-length = 100

'target-version' = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
